# IRC---CHAT

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/channel/: channel_flag.rs  mod.rs
src/client/: mod.rs
src/command/: away.rs  dcc_accept.rs  dcc_chat.rs  dcc_pause.rs  dcc_resume.rs  dcc_send.rs  invite.rs  join.rs  kick.rs  kill.rs  list.rs  mod.rs  mode.rs  names.rs  nick_command.rs  notice_msg.rs  oper_msg.rs  part.rs  pass_command.rs  private_msg.rs  quit.rs  server_msg.rs  squit.rs  topic.rs  traits.rs  user_command.rs  user_msg.rs  who.rs  whois.rs
src/database/: mod.rs
src/dcc/: cryptography.rs  dcc_connection.rs  dcc_handler.rs  download.rs  mod.rs  upload.rs  zipper.rs
src/dcc/command/: accept.rs  chat.rs  (+6 more)
src/error/: error_channel.rs  error_client.rs  error_command.rs  error_msg.rs  error_reply.rs  error_server.rs  error_user.rs  error_view.rs  mod.rs
src/parser/: dcc_message.rs  message.rs  mod.rs
src/reply/: code.rs  mod.rs  reply_maker.rs
src/repository/: connection.rs  mod.rs  repo.rs
src/server/: mod.rs
src/server_comunication/: info_sender.rs  mod.rs  server_connection.rs
src/string_object/: imp.rs  mod.rs
src/user/: builder.rs  mod.rs  user_flag.rs  user_handler.rs
src/utils/: mod.rs
src/view/: arc_widget_chat_model.rs  channel_user_config_window.rs  channel_user_menu.rs  channels_window.rs  config_window.rs  contacts_window.rs  dcc_send_file_window.rs  login_view_window.rs  mod.rs  model.rs  updateable_chat_view.rs  users_config_window.rs  users_window.rs
tests/: integration_test.rs
tests/common/: mod.rs
(+16 files in other folders)
